user database Middleware
